stderr
   Compiling hiker v0.1.0 (/sandbox)
error[E0425]: cannot find value `frame` in this scope
 --> src/lib.rs:9:12
  |
9 |         if frame == 'X' {
  |            ^^^^^ help: a local variable with a similar name exists: `frames`

error[E0425]: cannot find function `bonus_for_strike` in this scope
  --> src/lib.rs:10:33
   |
10 |             total_score += 10 + bonus_for_strike(&frames, frame_index);
   |                                 ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `sum_rolls_in_frame` in this scope
  --> src/lib.rs:40:22
   |
40 |             bonus += sum_rolls_in_frame(next_frame);
   |                      ^^^^^^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `hiker` (lib) due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `hiker` (lib test) due to 3 previous errors
